# Hairdresser

./: .env  README.md  main.py  pyproject.toml  settings.py
hairdresser/client/: models.py
hairdresser/hairdresser/: asgi.py  settings.py  urls.py  wsgi.py
hairdresser/user/: models.py
hairdresser/users/: models.py  urls.py
src/configuration/: database.py  models.py
src/repository/: auth.py  users.py
src/routes/: auth.py  users.py
src/schemas/: schemas.py  users.py
src/services/: auth.py  email.py
