[tool.poetry]
name = "hairdresser"
version = "0.0.1"
description = "web app for private hairdresser"
authors = ["HopMaTuB"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
sqlalchemy = "^2.0.31"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
